syntax = "proto3";

import "shipment_model.proto";

option java_multiple_files = true;
option java_package = "no.acntech.shipment.endpoint";

service ShipmentEndpoint {

  rpc getShipment (GetShipmentRequest) returns (GetShipmentResponse) {
  }

  rpc findShipments (FindShipmentsRequest) returns (FindShipmentsResponse) {
  }

  rpc createShipment (CreateShipmentRequest) returns (CreateShipmentResponse) {
  }
}
